--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,10 @@ p {
 
 h1 {
     font-family: 'Righteous', cursive;
+
+    font-size: 36px;
+
+    color: #FFFFFF;
 }
 
 .root {
@@ -27,11 +31,10 @@ h1 {
     margin-top: 140px;
 }
 
-.logo-comeco h1 {
-    font-size: 36px;
-    margin-top: 10%;
-
-    color: #FFFFFF;
+.logo-comeco img {
+    margin-bottom: 15px;
+    width: 136px;
+    height: 161px;
 }
 
 .botao-comecar {
@@ -55,4 +58,62 @@ h1 {
 .botao-comecar p {
     font-size: 18px;
     color: #D70900;
+}
+
+.logo-jogo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    width: 60%;
+    height: 70px;
+
+    margin-top: 45px;
+}
+
+.logo-jogo img {
+    width: 52px;
+    height: 60px;
+}
+
+.cards {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    width: 100%;
+
+    margin-top: 50px;
+}
+
+.cards > div {
+    margin-bottom: 25px;
+}
+
+.pergunta {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    width: 75%;
+    height: 65px;
+
+    padding: 2%;
+
+    border-radius: 5px;
+
+    box-shadow: 0 2px 5px rgb(104, 102, 102);
+
+    background-color: #FFFFFF;
+}
+
+.pergunta p {
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.pergunta ion-icon {
+    font-size: 30px;
+    --ionicon-stroke-width: 40px;
+    color: black;
 }
