--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,11 +6,12 @@ body {
     background-color: #FB6B6B;
 }
 
-p {
+body p {
     font-family: 'Recursive', sans-serif;
+    word-wrap: break-word;
 }
 
-h1 {
+body h1 {
     font-family: 'Righteous', cursive;
 
     font-size: 36px;
@@ -84,13 +85,15 @@ h1 {
     width: 100%;
 
     margin-top: 50px;
+
+    margin-bottom: 90px;
 }
 
 .cards > div {
     margin-bottom: 25px;
 }
 
-.pergunta {
+.botao-card {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -107,13 +110,94 @@ h1 {
     background-color: #FFFFFF;
 }
 
-.pergunta p {
+.botao-card p {
     font-weight: bold;
     font-size: 16px;
 }
 
-.pergunta ion-icon {
+.botao-card ion-icon {
     font-size: 30px;
     --ionicon-stroke-width: 40px;
     color: black;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+    width: 75%;
+    min-height: 131px;
+
+    position: relative;
+
+    padding: 3%;
+
+    border-radius: 5px;
+
+    box-shadow: 0 2px 5px rgb(104, 102, 102);
+
+    background-color: #FFFFD4;
+}
+
+.card img {
+    position: absolute;
+
+    bottom: 10px;
+    right: 15px;
+}
+
+.buttons {
+    display: flex;
+    justify-content: space-between;
+
+    width: 100%;
+}
+
+.button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    width: 31%;
+    height: 37px;
+    padding: 2%;
+
+    border-radius: 5px;
+}
+
+.button p {
+    font-size: 12px;
+
+    color: #FFFFFF;
+
+    text-align: center;
+}
+
+.background-red {
+    background-color: #FF3030;
+}
+
+.background-orange {
+    background-color: #FF922E;
+}
+
+.background-green {
+    background-color: #2FBE34;
+}
+
+.answered { 
+    text-decoration: line-through;
+}
+
+.red {
+    color: red;
+}
+
+.green {
+    color: #2FBE34;
+}
+
+.orange {
+    color: #FF922E;
 }
