--- a/src/css/style.css
+++ b/src/css/style.css
@@ -43,9 +43,12 @@ body h1 {
     justify-content: center;
     align-items: center;
 
-    margin-top: 10%;
+    cursor: pointer;
+
+    margin-top: 50px;
 
     width: 70%;
+    max-width: 600px;
     height: 54px;
 
     border: 1px solid #D70900;
@@ -98,7 +101,10 @@ body h1 {
     justify-content: space-between;
     align-items: center;
 
+    cursor: pointer;
+
     width: 75%;
+    max-width: 600px;
     height: 65px;
 
     padding: 2%;
@@ -127,11 +133,12 @@ body h1 {
     justify-content: space-between;
     
     width: 75%;
+    max-width: 600px;
     min-height: 131px;
 
     position: relative;
 
-    padding: 3%;
+    padding: 15px;
 
     border-radius: 5px;
 
@@ -142,6 +149,8 @@ body h1 {
 
 .card img {
     position: absolute;
+
+    cursor: pointer;
 
     bottom: 10px;
     right: 15px;
@@ -158,6 +167,8 @@ body h1 {
     display: flex;
     align-items: center;
     justify-content: center;
+
+    cursor: pointer;
     
     width: 31%;
     height: 37px;
@@ -196,7 +207,7 @@ body h1 {
     bottom: 0;
     left: 0;
 
-    padding: 3%;
+    padding: 15px;
 
     min-height:  70px;
     width: 100%;
