--- a/src/css/style.css
+++ b/src/css/style.css
@@ -253,6 +253,31 @@ body h1 {
     text-align: center;
 }
 
+.restart-container {
+    display: flex;
+    justify-content: center;
+    
+    width: 100%;
+}
+
+.restart-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    width: 50%;
+    max-width: 300px;
+    min-width: 200px;
+    height: 35px;
+
+    margin-top: 10px;
+
+    border-radius: 5px;
+
+    background-color: #FB6B6B;
+    color: #FFFFFF;
+}
+
 .red {
     color: red;
 }
