--- a/src/css/style.css
+++ b/src/css/style.css
@@ -264,6 +264,8 @@ body h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+
+    cursor: pointer;
     
     width: 50%;
     max-width: 300px;
